--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,22 +31,24 @@ header
 .header
 {
     font-size: 4em;
-    margin-top: 20px;
-    padding-top: 30px;
+    margin-top: 15px;
+    padding: 20px;
     text-align: center;
     font-weight: 600;
     line-height: 1.5;
-    color: rgb(0, 118, 202);;
+    color: rgb(0, 118, 202);
 }
 
-.header span
+.job
 {
-    font-size: 0.8em;
+    font-size: 2em;
     margin-top: 20px;
+    padding: 20px;
     text-transform: uppercase;
     text-align: center;
     font-weight: 600;
     line-height: 1.5;  
+    color: rgb(0, 118, 202);;
 }
 
 .container
@@ -68,14 +70,14 @@ header
     margin-left: 10px;
     margin-right: 10px;
     font-size: 1.2em;
-    color: rgb(0, 118, 202);
+    color: #fff;
 }
  .container .about h2
 {
     margin-top: 10%;
     margin-left: 10px;
     margin-right: 10px;
-    color: rgb(0, 118, 202);
+    color: #fff;
 }
 
 .container .left-side
