--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@ header
     text-align: center;
     font-weight: 600;
     line-height: 1.5;
-    color: rgb(0, 118, 202);
+    color: #fff;
 }
 
 .job
@@ -48,7 +48,8 @@ header
     text-align: center;
     font-weight: 600;
     line-height: 1.5;  
-    color: rgb(0, 118, 202);;
+    color: rgb(0, 118, 202);
+    justify-self: start;
 }
 
 .container
@@ -402,6 +403,11 @@ header
     {
         margin-left: 10px;
     }
+    .job
+    {
+        justify-self: center;
+    }
+    
 }
 
 @media (max-width: 600px)
