header min width

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,8 @@ header
     margin-left: 50px;
     margin-right: 50px;
     margin-top: 50px;
-    margin-bottom: 0;    
+    margin-bottom: 0; 
+    min-width: 598px;   
 }
 
 .header
