--- a/stylesheet.css
+++ b/stylesheet.css
@@ -147,8 +147,8 @@ header
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    width: 350px;
-    height: 350px;
+    width: 360px;
+    height: 360px;
     border-radius: 50%;
     border-width: 10px;
     border-color: #fff;
@@ -202,6 +202,7 @@ header
     text-align: left;
     font-weight: 300;
     line-height: 2;
+    user-select: none;
 }
 .language span:hover
 {
