--- a/stylesheet.css
+++ b/stylesheet.css
@@ -351,8 +351,8 @@ header
 .contact-icons
 {
     margin-left: 15%;
-    margin-top: 7%;
-    margin-bottom:10%;
+    margin-top: 2%;
+    margin-bottom:5%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
@@ -417,47 +417,116 @@ header
     line-height: 1.4; 
 }
 
+
+.downloads
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
 .vids
 {
     background-color: #fff;
     color: rgb(0, 118, 202);
-    display: grid;
-   grid-template-columns: 1fr 1fr;
-   text-transform: uppercase;
-   margin-bottom: 30px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    margin-right: auto;
+    margin-left: auto;
    
+}
+.vids2
+{
+    background-color: #fff;
+    color: rgb(0, 118, 202);
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-inline-end: 10px;
+   
+}
+.vids2 a:hover
+{
+    color: rgb(216, 236, 251);
+}
+.vids2 h3:hover
+{
+    color: rgb(216, 236, 251); 
+}
+.vids2 h3
+{
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    background-color: rgb(0, 118, 202);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
 }
 
 .vids a
 {
     justify-self: center;
     color: rgb(0, 118, 202);
+    text-decoration: none;
 }
 .vids a:hover
 {
-    color: rgb(1, 192, 244);
+    color: rgb(216, 236, 251);
 }
 .vids h3:hover
 {
-    color: rgb(1, 192, 244);
-    
+    color: rgb(216, 236, 251); 
+}
+.vids h3
+{
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    background-color: rgb(0, 118, 202);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
 }
 
+.CV
+{
+    margin-left: auto;
+    margin-right: auto;
+    margin-inline-start: 10px;
+}
 .CV h3
 {
     text-transform: uppercase;
-    text-align: center;
     margin-bottom: 30px;
-    color: rgb(0, 118, 202);
+    background-color: rgb(0, 118, 202);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
 }   
 .CV a:hover 
 {
-    color: rgb(1, 192, 244);
+    color: rgb(216, 236, 251);
+    align-self: baseline;
 }
-
+.CV a
+{
+    text-decoration: none;
+}
 .CV h3:hover
 {
-    color: rgb(1, 192, 244);
+    color: rgb(216, 236, 251);
 }
 
 
